# testxqillaxerces

./: .gitignore  CMakeLists.txt  CMakeSettings.json
TestXercesDOMLSInputAPI/: CMakeLists.txt  testdomlsinput.cpp
TestXqilla/: CMakeLists.txt  testxqilla.cpp
TestXquilla/: CMakeLists.txt  TestXquilla.cpp
cmake/: .FindXQilla.cmake.swp  AddXQilla.cmake  AddXercesC.cmake  FindXQilla.cmake  FindXercesC.cmake
resources/: sample.xml
